--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   mobx: ^1.2.1
   flutter_mobx: ^1.1.0
   provider: ^4.1.3
+  splashscreen: ^1.3.5
 
   cupertino_icons: ^1.0.2
   google_fonts: ^2.0.0
